# e-commerce-api

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Database_Schema-2025-02-09.sql  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: model.py
app/routes/: orders.py  products.py  users.py
app/schemas/: order.py  product.py  user.py
