[project]
name = "e-commerce-api"
version = "0.1.0"
description = "A RESTful API for an e-commerce platform."
authors = [
    {name = "Sakhile L. Ndlazi",email = "sakhilelindah@gmail.com"}
]
license = {text = "GNU GPL v3.0"}
readme = "README.md"
requires-python = "3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
