[project]
name = "e-commerce-api"
version = "0.1.0"
description = "A RESTful API for an e-commerce platform."
authors = [
    {name = "Sakhile L. Ndlazi",email = "sakhilelindah@gmail.com"}
]
license = {text = "GNU GPL v3.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "distlib (>=0.3.9,<0.4.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-jose (>=3.4.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
